# Projeto-SOE

./: PLACAS_ROUBADAS.txt  README.md
MeuProjetoALPR/: CMakeLists.txt
MeuProjetoALPR/src/: main.cpp
openalpr/src/cmake_modules/: FindTesseract.cmake
